--- a/styles.css
+++ b/styles.css
@@ -20,11 +20,11 @@ z-index: 2;
 
 .wave {
     background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 800 88.7'%3E%3Cpath d='M800 56.9c-155.5 0-204.9-50-405.5-49.9-200 0-250 49.9-394.5 49.9v31.8h800v-.2-31.6z' fill='%23003F7C'/%3E%3C/svg%3E");
-position: absolute;
-width: 200%;
-height: 100%;
-animation: wave 19s -3s linear infinite;
-transform: translate3d(0, 0, 0);
+    position: absolute;
+    width: 200%;
+    height: 100%;
+    animation: wave 19s -3s linear infinite;
+    transform: translate3d(0, 0, 0);
 }
 
 .wave:nth-of-type(2) {
@@ -70,30 +70,20 @@ canvas{
 
 .test {
     opacity: 0.5;
-    width: 200px;
-    height: 10px;
+    width: 10px;
+    height: 100px;
     background-color: brown;
     transition: 3s ease-in-out;
+    position: relative;
+    left: 20px;
 }
-
-.test:hover {
-    animation: 4s unsheathe;
-    opacity: 1;
+.hook{
+    width: 20px;
+    position: relative;
+    top: 60px;
+    left: -10px;
+    transition: 3s ease-in-out;
 }
-
-
-@keyframes unsheathe {
-    0% {
-        width: 200px;
-    }
-    50% {
-        width: 499px;
-    }
-    100% {
-        width: 200px;
-    }
-}
-
 .fish {
     width: 50px;
     height: 30px;
