--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ z-index: 2;
 }
 
 .wave {
-    background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 800 88.7'%3E%3Cpath d='M800 56.9c-155.5 0-204.9-50-405.5-49.9-200 0-250 49.9-394.5 49.9v31.8h800v-.2-31.6z' fill='%23003F7C'/%3E%3C/svg%3E");
+    background: url("./images/wave.png");
     position: absolute;
     width: 200%;
     height: 100%;
@@ -76,6 +76,7 @@ canvas{
     transition: 3s ease-in-out;
     position: relative;
     left: 20px;
+    z-index: 4;
 }
 .hook{
     width: 20px;
