--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,16 @@ canvas{
     100% {transform: translateY(0); transform: translateX(0);}
 }
 
+.fisher{
+    width: 200px;
+    transform: scaleX(-1);
+    z-index: -1;
+    position: absolute;
+    left: 75px;
+    bottom: 370px;
+    transition: all 0.5s cubic-bezier(0, 0, 0.12, 0.97);
+}
+
 .rod-stand{
     height: 100px;
     width: 3px;
