--- a/styles.css
+++ b/styles.css
@@ -4,18 +4,17 @@ html, body {
     overflow: hidden;
     background: url("./images/sky.jpeg") no-repeat;
     background-position: top;
-  }
-  
-/* waves */
+}
+
 .ocean {
-height: 50px;
-width: 100%;
-position: absolute;
-bottom: 350px;
-left: 0;
-right: 0;
-overflow-x: hidden;
-z-index: 2;
+    height: 50px;
+    width: 100%;
+    position: absolute;
+    bottom: 350px;
+    left: 0;
+    right: 0;
+    overflow-x: hidden;
+    z-index: 2;
 }
 
 .wave {
@@ -28,15 +27,15 @@ z-index: 2;
 }
 
 .wave:nth-of-type(2) {
-bottom: 0;
-animation: wave 18s linear reverse infinite;
-opacity: 0.9;
+    bottom: 0;
+    animation: wave 18s linear reverse infinite;
+    opacity: 0.9;
 }
 
 .wave:nth-of-type(3) {
-bottom: 0;
-animation: wave 20s -1s linear infinite;
-opacity: 0.9;
+    bottom: 0;
+    animation: wave 20s -1s linear infinite;
+    opacity: 0.9;
 }
 
 @keyframes wave {
@@ -110,6 +109,7 @@ canvas{
 .fish {
     position: absolute;
     z-index: 9;
+    transition: all .5s cubic-bezier(0, 0, 0.12, 0.97);
 }
 
 .flip-horizontally {
