--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,7 @@ canvas{
 
 .score-board{
     margin-left: 10px;
+    margin-top: -10px;
     font-family: monospace;
     font-size: 17px;
     font-weight: bold;
